# big1_backend

./: readme.md
crypto_wallet_service/: .env  .gitignore  Cargo.toml
crypto_wallet_service/src/: main.rs
crypto_wallet_service/src/config/: mod.rs
crypto_wallet_service/src/db/: mod.rs
crypto_wallet_service/src/errors/: mod.rs
crypto_wallet_service/src/jwt/: mod.rs
crypto_wallet_service/src/middleware/: mod.rs
crypto_wallet_service/src/models/: mod.rs
crypto_wallet_service/src/routes/: mod.rs
crypto_wallet_service/src/services/: mod.rs
crypto_wallet_service/src/utils/: mod.rs
order_service/: Cargo.toml
payment_service/: Cargo.toml
product_service/: Cargo.toml
user_service/: .env  Cargo.toml  Dockerfile
user_service/kubernetes/: generate-k8s-configs.sh  mongo-secret.yaml  user-service-configmap.yaml  user-service-deployment.yaml  user-service-service.yaml
user_service/src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs  services.rs
user_service/src/models/: mod.rs  user.rs
