[package]
name = "crypto_wallet_service"
version = "0.1.0"
edition = "2018"



[dependencies] 
actix-web = "4"
actix-rt = "2"
actix-web-httpauth = "0.6"
mongodb = "2"
bson = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
chrono = "0.4"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"  # Add this line
paperclip = { version = "0.9", features = ["actix4"] }
