[package]
name = "user_service"
version = "0.1.0"
edition = "2018"



[dependencies]
actix-web = "4.0"
actix-rt = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8.2", default-features = false, features = ["async-std-runtime"] }
dotenv = "0.15"
bcrypt = "0.16.0"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4", features = ["serde"] }

futures = "0.3"  # Or the latest version of futures

schemars = { package = "apistos-schemars", version = "0.8" }
apistos = "0.4"


utoipa = "5.2.0"
utoipa-swagger-ui = "8.0.3"     # Swagger UI for easy viewing
